--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 sysinfo = "0.16.4"
 byte-unit = "4.0.9"
-tokio = {version = "1.2.0", features = ["time", "macros", "rt-multi-thread"]}
+# tokio = {version = "1.2.0", features = ["time", "macros", "rt-multi-thread"]}
